port and dockerfile updated
